--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- Footer -->
     <footer>
         <div class="row">
-            <hr class="footer-hr"/>
+            <hr class="footer-hr style18"/>
             <div class="col-lg-12">
 
                 <div class="pull-left">&copy; Vse pravice pridržane, 2016</div>
