added modal with video element

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
     <script src="https://use.fontawesome.com/d4628cf4e3.js"></script>
-    <script src="js/layout.js"></script>
+
 
 
 </head>
@@ -69,16 +69,6 @@
     <!-- /.container -->
 </nav>
 
-<!-- Full Width Image Header -->
-<!--<header class="header-image">
-    <div class="headline">
-        <div class="container">
-            <h1>One Page Wonder</h1>
-            <h2>Will Knock Your Socks Off</h2>
-        </div>
-    </div>
-</header>-->
-
 <!-- Page Content -->
 <div class="container">
 
@@ -92,8 +82,22 @@
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla.
                 Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna,
+                vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. Donec ullamcorper nulla non
+                metus auctor fringilla.
+                Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna,
                 vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
             </p>
+            <div class="actionLinks">
+                <p>
+                    <a class="actionLinks btn btn-default"><span class="fa fa-external-link" aria-hidden="true"></span>&nbsp;
+                        Povezava na aplikacijo
+                    </a>
+
+                    <button class="actionLinks btn btn-primary" data-toggle="modal" data-target="#videoModalPreslikave"><span class="fa fa-film" aria-hidden="true"></span>&nbsp;
+                        Predstavitveni video
+                    </button>
+                </p>
+            </div>
         </div>
 
         <div class="col-sm-3 col-md-4 col-lg-5">
@@ -136,8 +140,22 @@
             </h2>
             <p class="lead">Donec ullamcorper nulla non metus auctor fringilla.
                 Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna,
+                vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. Donec ullamcorper nulla non
+                metus auctor fringilla.
+                Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna,
                 vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
             </p>
+            <div class="actionLinks">
+                <p>
+                    <a class="actionLinks btn btn-default"><span class="fa fa-external-link" aria-hidden="true"></span>&nbsp;
+                        Povezava na aplikacijo
+                    </a>
+
+                    <button class="actionLinks btn btn-primary" data-toggle="modal" data-target="#videoModalRazsiritve"><span class="fa fa-film" aria-hidden="true"></span>&nbsp;
+                        Predstavitveni video
+                    </button>
+                </p>
+            </div>
         </div>
     </div>
 
@@ -153,6 +171,42 @@
             semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus
             commodo.</p>
     </div>-->
+
+    <div class="modal fade" id="videoModalPreslikave">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Metaforične preslikave</h4>
+                </div>
+                <div class="modal-body">
+                    <!--<iframe width="550" height="350" src="http://www.youtube.com/embed/lgZBsWGaQY0" frameborder="0"></iframe>-->
+                    <video width="550" controls src="video/big_buck_bunny.mp4" type="video/mp4">
+                        <!--<source src="video/big_buck_bunny.mp4" type="video/mp4">-->
+                        Your browser does not support HTML5 video.
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="videoModalRazsiritve">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Metaforične razširitve</h4>
+                </div>
+                <div class="modal-body">
+                    <!--<iframe width="550" height="350" src="http://www.youtube.com/embed/lgZBsWGaQY0" frameborder="0"></iframe>-->
+                    <video width="550" controls src="video/big_buck_bunny.mp4" type="video/mp4">
+                        <!--<source src="video/big_buck_bunny.mp4" type="video/mp4">-->
+                        Your browser does not support HTML5 video.
+                    </video>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Footer -->
@@ -175,7 +229,7 @@
 
 <!-- jQuery -->
 <script src="js/jquery.js"></script>
-
+<script src="js/layout.js"></script>
 <!-- Bootstrap Core JavaScript -->
 <script src="js/bootstrap.min.js"></script>
 
