--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
     <script src="https://use.fontawesome.com/d4628cf4e3.js"></script>
 
 
-
 </head>
 
 <body>
@@ -80,20 +79,30 @@
         <div class="col-sm-9 col-md-8 col-lg-7">
             <h2 class="featurette-heading">Metaforične preslikave
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla.
-                Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna,
-                vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. Donec ullamcorper nulla non
-                metus auctor fringilla.
-                Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna,
-                vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+            <p class="lead"> Metaforične preslikave / dekodiranje barve slike skozi verbalno komunikacijo gledalca.
+                Projekt
+                ima status novomedijske interaktivne instalacije, ki raziskuje specifiko videnega režima v katerem
+                se določajo odnosi med tistim, ki gledajo / gledale, umetnik, računalniki vmesnik / in vidnem / slika
+                "Sejalec". To repozicioniranje gledalca zrcali metafora gledanja / viewing metaphor.
             </p>
+            <p class="sodelujoci">
+                V projektu so sodelovali:
+            </p>
+            <ul class="sodelujoci" style="list-style-type:circle">
+                <li>prof. Srečo Dragan</li>
+                <li>Marko Hlupič</li>
+                <li>Nenad Panič</li>
+                <li>dr. Borut Batagelj, Laboratorij za računalniški vid, FRI, Univerza Ljubljana</li>
+                <li>Silvo Gazvoda, FRI, Univerza Ljubljana</li>
+            </ul>
             <div class="actionLinks">
                 <p>
                     <a class="actionLinks btn btn-default"><span class="fa fa-external-link" aria-hidden="true"></span>&nbsp;
                         Povezava na aplikacijo
                     </a>
 
-                    <button class="actionLinks btn btn-primary" data-toggle="modal" data-target="#videoModalPreslikave"><span class="fa fa-film" aria-hidden="true"></span>&nbsp;
+                    <button class="actionLinks btn btn-primary" data-toggle="modal" data-target="#videoModalPreslikave">
+                        <span class="fa fa-film" aria-hidden="true"></span>&nbsp;
                         Predstavitveni video
                     </button>
                 </p>
@@ -101,10 +110,9 @@
         </div>
 
         <div class="col-sm-3 col-md-4 col-lg-5">
-            <img class="featurette-image img-circle img-responsive pull-right" src="images/sejalec.jpg" height="500"
-                 width="445">
-
+            <img class="featurette-image img-circle img-responsive" src="images/sejalec2.jpg">
         </div>
+
 
         <!--<div class="ih-item circle effect2 left_to_right pull-right"><a href="#">-->
         <!--<div class="img">
@@ -133,25 +141,32 @@
     <!-- Second Featurette -->
     <div class="featurette" id="razsiritve">
         <div class="col-sm-3 col-md-4 col-lg-5">
-            <img class="featurette-image img-circle img-responsive" src="images/slika3.jpg">
+            <img class="featurette-image img-circle img-responsive" src="images/Jedilnica11.JPG">
         </div>
         <div class="col-sm-9 col-md-8 col-lg-7">
             <h2 class="featurette-heading">Metaforične razširitve
             </h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla.
-                Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna,
-                vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo. Donec ullamcorper nulla non
-                metus auctor fringilla.
-                Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna,
-                vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.
+            <p class="lead">Dekodiranje zgodb treh tapiserij skozi vizualno-verbalno komunikacijo gledalca
+                v razstavnem prostoru pokrajinskega muzeja Ptuj. Uporabnik je povabljen k ubesedenju konfliktnih ali razrešitvenih
+                relacij med dvema izbranima odsekoma dogajanja iz podob z mitološkim dogajanjem.
             </p>
+            <p class="sodelujoci">
+                V projektu so sodelovali:
+            </p>
+            <ul class="sodelujoci" style="list-style-type:circle">
+                <li>prof. Srečo Dragan</li>
+                <li>kustodinji Pokrajinskega muzeja Ptuj: Stanka Gačnik in Polona Vidmar</li>
+                <li>dr. Borut Batagelj, Laboratorij za računalniški vid, FRI, Univerza Ljubljana</li>
+                <li>Silvo Gazvoda, FRI, Univerza Ljubljana</li>
+            </ul>
             <div class="actionLinks">
                 <p>
                     <a class="actionLinks btn btn-default"><span class="fa fa-external-link" aria-hidden="true"></span>&nbsp;
                         Povezava na aplikacijo
                     </a>
 
-                    <button class="actionLinks btn btn-primary" data-toggle="modal" data-target="#videoModalRazsiritve"><span class="fa fa-film" aria-hidden="true"></span>&nbsp;
+                    <button class="actionLinks btn btn-primary" data-toggle="modal" data-target="#videoModalRazsiritve">
+                        <span class="fa fa-film" aria-hidden="true"></span>&nbsp;
                         Predstavitveni video
                     </button>
                 </p>
