--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </ul>
             <div class="actionLinks">
                 <p>
-                    <a class="actionLinks btn btn-default" href="#"><span class="fa fa-external-link" aria-hidden="true"></span>&nbsp;
+                    <a class="actionLinks btn btn-default" href="https://github.com/silvog/ioi-preslikave_base"><span class="fa fa-external-link" aria-hidden="true"></span>&nbsp;
                         Povezava na aplikacijo
                     </a>
 
@@ -161,7 +161,7 @@
             </ul>
             <div class="actionLinks">
                 <p>
-                    <a class="actionLinks btn btn-default" href="#"><span class="fa fa-external-link" aria-hidden="true"></span>&nbsp;
+                    <a class="actionLinks btn btn-default" href="https://github.com/silvog/ioi-razsiritve_base"><span class="fa fa-external-link" aria-hidden="true"></span>&nbsp;
                         Povezava na aplikacijo
                     </a>
 
